# bomulator

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
bomulator-cli/: Cargo.toml
bomulator-cli/src/: main.rs
bomulator-cli/tests/output_expected/: test_default_vulnerabilities_default_types.spdx.json
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs
examples/: generate_sboms.rs
src/: common.rs  lib.rs  main.rs
src/entities/: mod.rs  osv.rs  prelude.rs
tests/: test.rs
tests/output_expected/: test_custom_vulnerabilities_custom_types.cdx.json  test_custom_vulnerabilities_custom_types.spdx.json  test_default_vulnerabilities_default_types.cdx.json
