[package]
name = "bomulator"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
authors = ["mrizzi"]

[dependencies]
clap = {version = "4.5", features = ["derive", "color"]}
indicatif = "0.17"
itertools = "0.14"
packageurl = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros", "sqlx-sqlite"] }
serde-cyclonedx = "0.9"
spdx-rs = "0.5"
tokio = { version = "1", features = ["full"] }
zip = "2.6"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
json_diff_ng = "0.6.0"
