[package]
name = "bomulator"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = {workspace = true}
entity = {path = "../entity"}
indicatif = {workspace = true}
itertools = {workspace = true}
packageurl = {workspace = true}
regex = {workspace = true}
serde = {workspace = true}
sea-orm = {workspace = true}
serde-cyclonedx = {workspace = true}
serde_json = {workspace = true}
spdx-rs = {workspace = true}
tokio = {workspace = true}
zip = {workspace = true}

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
json_diff_ng = "0.6.0"
